<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/header_top_padding"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xl"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_md"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xl"
        android:layout_marginBottom="@dimen/spacing_xl"
        android:background="@drawable/bg_button_primary"
        android:paddingVertical="@dimen/spacing_md"
        android:text="@string/get_started"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/tv_developer_signature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_developer_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:text="@string/developed_by"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@+id/tv_developer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:text="@string/developer_name"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
