<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/header_top_padding"
        android:paddingBottom="@dimen/spacing_sm"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/home_title"
                android:textStyle="bold"
                android:textColor="?attr/colorPrimary"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/spacing_md"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/spacing_md">

        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_lg"
            android:gravity="center"
            android:text="@string/tap_to_record"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hold_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_sm"
            android:gravity="center"
            android:text="@string/hold_to_activate"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:alpha="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_md"
            android:layout_marginTop="@dimen/spacing_xl"
            android:visibility="gone"
            app:cardBackgroundColor="?attr/colorSurface"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hold_instructions"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_md">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/listening"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/tv_transcription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    tools:text="This is a sample transcription text that will appear here as you speak." />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_developer_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md"
            android:text="@string/developer_name"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textStyle="italic"
            android:alpha="0.7"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_lg"
        android:contentDescription="@string/tap_to_record"
        android:src="@drawable/ic_mic"
        app:backgroundTint="?attr/colorPrimary"
        app:fabCustomSize="@dimen/fab_size"
        app:maxImageSize="@dimen/icon_size_md"
        app:tint="?attr/colorOnPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>