<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/header_top_padding"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/transcription_title"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_xxl"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_transcription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="@dimen/spacing_md"
                app:cardBackgroundColor="?attr/colorSurface"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_transcription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_md"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textIsSelectable="true"
                    android:focusable="true"
                    android:longClickable="true"
                    tools:text="This is a sample transcription text that will appear here as you speak. It can be multiple lines long and will display the full transcription of what was recorded." />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_play"
                style="@style/Widget.Transbord.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="@dimen/spacing_xl"
                android:text="@string/play_audio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_transcription" />

            <LinearLayout
                android:id="@+id/divider_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="@dimen/spacing_xl"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_play">

                <TextView
                    android:id="@+id/tv_enhance_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enhance_options"
                    android:textAppearance="@style/TextAppearance.Transbord.Divider"
                    android:layout_marginEnd="@dimen/spacing_md" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/divider_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_buttons_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:layout_marginTop="@dimen/spacing_md"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_container">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_enhance"
                    style="@style/Widget.Transbord.Button.OutlinedWithIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_sm"
                    android:layout_weight="1"
                    android:text="@string/enhance_with_ai"
                    app:icon="@drawable/ic_edit" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete"
                    style="@style/Widget.Transbord.Button.OutlinedWithIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_sm"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="@color/error"
                    app:icon="@drawable/ic_delete"
                    app:iconTint="@color/error"
                    app:strokeColor="@color/error" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
